@@ -1,0 +1,4 @@
+<div>
+Being able to write in AsciiDoc instead of Markdown,
+<b>priceless</b>.
+</div>
